--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.11",
+    "@fontsource/poppins": "^4.5.9",
+    "@mdx-js/react": "^2.1.3",
+    "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.22.1",
     "gatsby-plugin-image": "^2.22.0",
     "gatsby-plugin-manifest": "^4.22.0",
+    "gatsby-plugin-mdx": "^4.1.1",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.22.0",
     "gatsby-plugin-sharp": "^4.22.0",
     "gatsby-source-filesystem": "^4.22.0",
     "gatsby-transformer-sharp": "^4.22.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.9"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
