--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^2.1.3",
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.22.1",
+    "gatsby-plugin-google-tagmanager": "^4.24.0",
     "gatsby-plugin-image": "^2.22.0",
     "gatsby-plugin-manifest": "^4.22.0",
     "gatsby-plugin-mdx": "^4.1.1",
